import { render } from '@testing-library/react'
import { MenuItem } from '../menu.molecules'

describe('MenuItem component', () => {
  it('should render with required props and match snapshot', () => {
    const { asFragment } = render(<MenuItem label="Test Menu Item" />)
    expect(asFragment()).toMatchSnapshot()
  })

  it('should render with complete features enabled and match snapshot', () => {
    const { asFragment } = render(
      <MenuItem
        label="Test Menu Item"
        supplementaryInfo="Test Supplementary Info"
        leftIcon={<span>Left Icon</span>}
        rightIcon={<span>Right Icon</span>}
        closeMenu={false}
      />,
    )
    expect(asFragment()).toMatchSnapshot()
  })
})
